--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Terms of Use and Privacy Policy</title>
     <style>
+      @import url("https://fonts.googleapis.com/css2?family=Fraunces:wght@600;700&family=Space+Grotesk:wght@400;500;600&display=swap");
+
       :root {
         color-scheme: light;
-        --bg: #f7f3ee;
-        --ink: #1b1a19;
-        --muted: #5e5751;
+        --orange: #fc4b15;
+        --blue: #b7d9ff;
+        --cream: #f7ede4;
+        --ink: #141312;
+        --muted: #4f4a46;
         --card: #ffffff;
-        --accent: #c95b2c;
-        --border: #e4ddd4;
+        --border: rgba(20, 19, 18, 0.1);
+        --shadow: 0 24px 60px rgba(20, 19, 18, 0.12);
       }
 
       * {
@@ -21,55 +25,135 @@
 
       body {
         margin: 0;
-        font-family: "Georgia", "Times New Roman", serif;
-        background: radial-gradient(circle at top, #fff6eb 0%, #f7f3ee 45%, #efe8de 100%);
+        min-height: 100vh;
+        font-family: "Space Grotesk", "Segoe UI", sans-serif;
+        background: linear-gradient(130deg, #fffdf9 0%, var(--cream) 35%, #ffffff 55%, var(--blue) 100%);
         color: var(--ink);
+        position: relative;
+        overflow-x: hidden;
+      }
+
+      body::before,
+      body::after {
+        content: "";
+        position: fixed;
+        width: 55vw;
+        height: 55vw;
+        border-radius: 999px;
+        filter: blur(20px);
+        opacity: 0.35;
+        z-index: 0;
+        pointer-events: none;
+      }
+
+      body::before {
+        top: -20vw;
+        right: -10vw;
+        background: radial-gradient(circle, rgba(252, 75, 21, 0.55), rgba(252, 75, 21, 0));
+        animation: floatOne 18s ease-in-out infinite;
+      }
+
+      body::after {
+        bottom: -30vw;
+        left: -15vw;
+        background: radial-gradient(circle, rgba(183, 217, 255, 0.85), rgba(183, 217, 255, 0));
+        animation: floatTwo 20s ease-in-out infinite;
+      }
+
+      .page {
+        position: relative;
+        z-index: 1;
       }
 
       header {
-        padding: 48px 20px 24px;
-        text-align: center;
+        padding: 56px 20px 32px;
       }
 
-      header h1 {
-        margin: 0 0 8px;
-        font-size: clamp(28px, 4vw, 40px);
-        letter-spacing: 0.3px;
+      .hero {
+        max-width: 960px;
+        margin: 0 auto;
+        display: grid;
+        gap: 20px;
+        align-items: center;
+        grid-template-columns: minmax(0, 1fr);
       }
 
-      header p {
+      .hero__badge {
+        display: inline-flex;
+        align-items: center;
+        gap: 12px;
+        padding: 10px 18px 10px 12px;
+        border-radius: 999px;
+        background: #ffffff;
+        border: 1px solid var(--border);
+        box-shadow: 0 10px 25px rgba(20, 19, 18, 0.1);
+        font-weight: 600;
+        letter-spacing: 0.2px;
+        width: fit-content;
+      }
+
+      .hero__badge img {
+        width: 40px;
+        height: 40px;
+        border-radius: 12px;
+        border: 2px solid var(--orange);
+        background: var(--cream);
+      }
+
+      .hero__title {
+        font-family: "Fraunces", "Times New Roman", serif;
+        font-size: clamp(32px, 4.6vw, 54px);
+        line-height: 1.05;
+        margin: 8px 0 8px;
+      }
+
+      .hero__title span {
+        color: var(--orange);
+      }
+
+      .hero__subtitle {
         margin: 0;
         color: var(--muted);
-        font-size: 16px;
+        font-size: 17px;
+        max-width: 560px;
+      }
+
+      .hero__stripe {
+        height: 6px;
+        width: 120px;
+        border-radius: 999px;
+        background: linear-gradient(90deg, var(--orange), var(--blue));
       }
 
       main {
-        max-width: 860px;
-        margin: 0 auto 64px;
+        max-width: 920px;
+        margin: 0 auto 72px;
         padding: 0 20px;
       }
 
       .card {
         background: var(--card);
+        border-radius: 22px;
+        padding: 32px;
+        box-shadow: var(--shadow);
         border: 1px solid var(--border);
-        border-radius: 16px;
-        padding: 28px;
-        box-shadow: 0 20px 40px rgba(27, 26, 25, 0.08);
+        animation: rise 0.8s ease-out both;
       }
 
-      h1,
-      h2 {
+      #content h1,
+      #content h2 {
         margin-top: 36px;
         font-size: 24px;
-        color: var(--accent);
+        color: var(--orange);
+        font-family: "Fraunces", "Times New Roman", serif;
       }
 
-      h3 {
+      #content h3 {
         margin-top: 28px;
         font-size: 20px;
       }
 
-      h4 {
+      #content h4 {
         margin-top: 20px;
         font-size: 18px;
       }
@@ -89,25 +173,74 @@
       }
 
       a {
-        color: var(--accent);
+        color: var(--orange);
       }
 
       .loading {
         color: var(--muted);
+        letter-spacing: 0.2px;
+      }
+
+      @keyframes rise {
+        from {
+          opacity: 0;
+          transform: translateY(18px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+
+      @keyframes floatOne {
+        0%,
+        100% {
+          transform: translate3d(0, 0, 0);
+        }
+        50% {
+          transform: translate3d(-20px, 15px, 0);
+        }
+      }
+
+      @keyframes floatTwo {
+        0%,
+        100% {
+          transform: translate3d(0, 0, 0);
+        }
+        50% {
+          transform: translate3d(20px, -10px, 0);
+        }
+      }
+
+      @media (min-width: 900px) {
+        .hero {
+          grid-template-columns: auto minmax(0, 1fr);
+        }
       }
     </style>
   </head>
   <body>
-    <header>
-      <h1>Terms of Use and Privacy Policy</h1>
-      <p>Double You mobile application</p>
-    </header>
+    <div class="page">
+      <header>
+        <div class="hero">
+          <div class="hero__badge">
+            <img src="icon-9-1024.png" alt="Double You app icon" />
+            Double You
+          </div>
+          <div>
+            <div class="hero__stripe" aria-hidden="true"></div>
+            <h1 class="hero__title">Terms of Use <span>&amp;</span> Privacy Policy</h1>
+            <p class="hero__subtitle">Everything you need to know about how the Double You mobile app handles your data and protects your trust.</p>
+          </div>
+        </div>
+      </header>
 
-    <main>
-      <section class="card">
-        <div id="content" class="loading">Loading policy content...</div>
-      </section>
-    </main>
+      <main>
+        <section class="card">
+          <div id="content" class="loading">Loading policy content...</div>
+        </section>
+      </main>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script>
