Add app description section

--- a/index.html
+++ b/index.html
@@ -138,6 +138,29 @@
         animation: rise 0.8s ease-out both;
       }
 
+      .app-info {
+        margin-top: 28px;
+      }
+
+      .app-info h2,
+      .app-info h3 {
+        margin-top: 28px;
+        color: var(--orange);
+        font-family: "Fraunces", "Times New Roman", serif;
+      }
+
+      .app-info h2 {
+        font-size: 24px;
+      }
+
+      .app-info h3 {
+        font-size: 20px;
+      }
+
+      .app-info .tagline {
+        font-weight: 600;
+      }
+
       #content h1,
       #content h2 {
         margin-top: 36px;
@@ -233,6 +256,40 @@
       <main>
         <section class="card">
           <div id="content" class="loading">Loading policy content...</div>
+        </section>
+        <section class="card app-info">
+          <h2>Double You: Clone Videos in Minutes</h2>
+          <p class="tagline">Record twice, paint to reveal, export your double.</p>
+          <p>Double You lets you create the classic clone effect so you appear alongside yourself in a single video. No AI, no gimmicks, just a focused tool that does one thing very well.</p>
+
+          <h3>How it works</h3>
+          <ol>
+            <li>Place your phone on a tripod or stable surface.</li>
+            <li>Record your first take.</li>
+            <li>Record your second take (do not move the phone).</li>
+            <li>Paint on screen to reveal where each version of you appears.</li>
+            <li>Export and share.</li>
+          </ol>
+
+          <h3>Why Double You</h3>
+          <ul>
+            <li>No account required.</li>
+            <li>No AI: fast, private, works offline.</li>
+            <li>No watermarks.</li>
+            <li>Smooth, professional-looking results.</li>
+            <li>Paint-to-reveal masking for precise control.</li>
+            <li>Export directly to your gallery.</li>
+          </ul>
+
+          <h3>Great for</h3>
+          <ul>
+            <li>Social media content and short-form video (TikTok, Reels, Shorts).</li>
+            <li>Creative storytelling, skits, and magic tricks.</li>
+            <li>Fun moments with friends and family.</li>
+            <li>Pro-looking effects without complex software.</li>
+          </ul>
+
+          <p>One phone. Two takes. Infinite possibilities. Download Double You and start cloning.</p>
         </section>
       </main>
     </div>
