--- a/sunset-score/index.html
+++ b/sunset-score/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Privacy Policy — Sunset Forecast</title>
+    <title>Privacy Policy — Sunset Score</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Fraunces:wght@600;700&family=Space+Grotesk:wght@400;500;600&display=swap");
 
@@ -209,9 +209,9 @@
     <div class="page">
       <header>
         <div class="hero">
-          <div class="hero__badge">Sunset Forecast</div>
+          <div class="hero__badge">Sunset Score</div>
           <h1 class="hero__title"><span>Privacy</span> Policy</h1>
-          <p class="hero__subtitle">How the Sunset Forecast app handles your data and protects your privacy.</p>
+          <p class="hero__subtitle">How the Sunset Score app handles your data and protects your privacy.</p>
         </div>
       </header>
 
