--- a/sunset-score/index.html
+++ b/sunset-score/index.html
@@ -158,7 +158,7 @@
       #content h2 {
         margin-top: 36px;
         font-size: 24px;
-        color: var(--great-bg);
+        color: var(--good-bg);
         font-family: "Fraunces", "Times New Roman", serif;
       }
 
@@ -189,7 +189,7 @@
       }
 
       a {
-        color: var(--great-bg);
+        color: var(--good-bg);
       }
 
       .loading {
