--- a/sunset-score/index.html
+++ b/sunset-score/index.html
@@ -39,16 +39,31 @@
         margin: 0;
         min-height: 100vh;
         font-family: "Space Grotesk", "Segoe UI", sans-serif;
-        background:
+        background-color: var(--absent-bg);
+        background-image:
           linear-gradient(
-            140deg,
-            #fdf6f0 0%,
-            var(--okay-bg) 18%,
+            185deg,
+            var(--poor-bg) 0%,
+            var(--okay-bg) 16%,
             var(--good-bg) 34%,
-            var(--great-bg) 52%,
-            var(--incredible-bg) 68%,
-            #8c1a2a 82%,
+            var(--great-bg) 50%,
+            var(--incredible-bg) 64%,
+            #8c1a2a 76%,
             var(--absent-bg) 100%
+          ),
+          linear-gradient(
+            95deg,
+            rgba(241, 189, 69, 0.24) 0%,
+            rgba(207, 87, 53, 0.22) 32%,
+            rgba(207, 56, 51, 0.2) 52%,
+            rgba(40, 66, 125, 0.35) 100%
+          ),
+          repeating-linear-gradient(
+            165deg,
+            rgba(255, 255, 255, 0.07) 0px,
+            rgba(255, 255, 255, 0.07) 1px,
+            rgba(255, 255, 255, 0) 10px,
+            rgba(255, 255, 255, 0) 22px
           );
         color: var(--ink);
         position: relative;
@@ -69,17 +84,49 @@
       }
 
       body::before {
-        top: -22vw;
-        right: -12vw;
-        background: radial-gradient(circle, rgba(207, 56, 51, 0.6), rgba(241, 189, 69, 0.15), transparent);
+        top: -16vw;
+        right: -10vw;
+        background: radial-gradient(
+          circle,
+          rgba(241, 189, 69, 0.6),
+          rgba(207, 87, 53, 0.35),
+          transparent 70%
+        );
         animation: floatOne 18s ease-in-out infinite;
       }
 
       body::after {
-        bottom: -28vw;
-        left: -14vw;
-        background: radial-gradient(circle, rgba(40, 66, 125, 0.65), rgba(165, 203, 207, 0.2), transparent);
+        bottom: -26vw;
+        left: -18vw;
+        background: radial-gradient(
+          circle,
+          rgba(40, 66, 125, 0.7),
+          rgba(165, 203, 207, 0.25),
+          transparent 65%
+        );
         animation: floatTwo 20s ease-in-out infinite;
+      }
+
+      .page::before {
+        content: "";
+        position: fixed;
+        left: 50%;
+        bottom: 22vh;
+        width: 48vw;
+        height: 48vw;
+        transform: translateX(-50%);
+        border-radius: 999px;
+        background: radial-gradient(
+          circle,
+          rgba(241, 189, 69, 0.85) 0%,
+          rgba(207, 87, 53, 0.55) 35%,
+          rgba(207, 56, 51, 0.3) 55%,
+          transparent 72%
+        );
+        filter: blur(2px);
+        opacity: 0.9;
+        z-index: 0;
+        pointer-events: none;
       }
 
       .page {
