style#2 from codex3

--- a/sunset-score/index.html
+++ b/sunset-score/index.html
@@ -75,16 +75,7 @@
       }
 
       .page::before {
-        content: "";
-        position: fixed;
-        left: 0;
-        right: 0;
-        top: 68%;
-        height: 3px;
-        background: var(--good-bg);
-        box-shadow: 0 0 0 2px var(--incredible-bg);
-        z-index: 0;
-        pointer-events: none;
+        content: none;
       }
 
       .page {
@@ -245,7 +236,7 @@
       <header>
         <div class="hero">
           <div class="hero__badge">Sunset Score</div>
-          <h1 class="hero__title"><span>Privacy</span> Policy</h1>
+          <h1 class="hero__title"><span>Privacy Policy</span> &amp; Terms and Conditions</h1>
           <p class="hero__subtitle">How the Sunset Score app handles your data and protects your privacy.</p>
         </div>
       </header>
