style#2 from codex3

--- a/sunset-score/index.html
+++ b/sunset-score/index.html
@@ -124,7 +124,7 @@
       }
 
       .hero__title span {
-        color: var(--good-bg);
+        color: var(--incredible-bg);
       }
 
       .hero__subtitle {
