--- a/sunset-score/index.html
+++ b/sunset-score/index.html
@@ -154,7 +154,7 @@
       #content h2 {
         margin-top: 36px;
         font-size: 24px;
-        color: var(--good-bg);
+        color: var(--incredible-bg);
         font-family: "Fraunces", "Times New Roman", serif;
       }
 
@@ -185,7 +185,7 @@
       }
 
       a {
-        color: var(--good-bg);
+        color: var(--incredible-bg);
       }
 
       .loading {
